--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-		<link rel="stylesheet" href="../../public/assets/css/burger_style.css" type="text/css" />
-		<title>Eat-Da-Burger!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/index.js"></script>
-	</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>Eat-Da-Burger</title>
+
+	<link rel="stylesheet" href="../../public/assets/css/burger_style.css" type="text/css" />
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="../../public/assets/js/index.js"></script>
+</head>
 	<body>
 		{{{ body }}}
 	</body>
