--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Eat-Da-Burger</title>
-
-	<link rel="stylesheet" href="../../public/assets/css/burger_style.css" type="text/css" />
+	{{!-- jquery --}}
 	<script src="https://code.jquery.com/jquery.js"></script>
+	{{!-- custom js --}}
 	<script src="../../public/assets/js/index.js"></script>
+
+	<!-- Bootstap CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<!-- Font Awesome Icons -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		{{!--custom CSS  --}}
+		<link rel="stylesheet" href="../../public/assets/css/burger_style.css" type="text/css" />
+
+
 </head>
 	<body>
 		{{{ body }}}
