--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 	{{!-- jquery --}}
 	<script src="https://code.jquery.com/jquery.js"></script>
 	{{!-- custom js --}}
-	<script src="../../public/assets/js/index.js"></script>
+	<script src="/assets/js/index.js"></script>
 
 	<!-- Bootstap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
